css/use-report.css
/*** Profile homepage ***/

/* Ratings Header */
.profile-homepage #content .organization-average-rating-container {
  margin-top: 21px;
  overflow: auto;
}

.profile-homepage #content .organization-average-rating-container .star-rate-text {
  font-size: 14px;
  letter-spacing: 0.2px;
  margin-right: 5px;
  padding: 4px 0px 0px 3px;
}

.profile-homepage #content .organization-average-rating-container .star-container {
  margin-top: 2px;
}

.profile-homepage #content .organization-average-rating-container .rate-this-organization {
  font-size: 14px;
  text-decoration: underline;
  margin: 4px 0px 0px 6px;
  padding: 0px 0px 0px 15px;
}

.profile-homepage #content .organization-average-rating-container .rate-this-organization a {
  color: #2c66ce;
}

.profile-homepage #content .organization-average-rating-container .star-container .medium-star-negative,
.profile-homepage #content .organization-average-rating-container .star-container .medium-star-positive {
  margin-right: 3px;
}

.profile-homepage #content .communities-ratings-block .button-bar a.button.with-text {
  height: 32px;
  padding: 0px 5px;
  border: 1px solid #3E67B1;
  font-family: 'open_sansbold';
  font-size: 14px;
  line-height: 32px;
  text-transform: uppercase;
}

/* Use report list */

.profile-homepage #content .communities-ratings-block .ratings-title .block-title {
  background: none;
  border-bottom: 1px solid #D3D6DE;
  border-top: none;
  color: #172738;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 1.8px;
  margin-bottom: 0px;
  padding: 0px 0px 12px 4px;
}

.profile-homepage #content .communities-ratings-block .ratings-list .make-report-block {
  margin-top: 0px;
  padding-top: 32px;
  background-repeat: no-repeat;
  border-bottom: 1px solid #D3D6DE;
  border-top: none;
  font-family: Arial;
}

#content #software-information-block-table {
  width: 100%;
}

#content #software-information-block-table h1 {
  font-size: 34px;
}

#content #software-information-block-table #col-profile-big-image {
  padding-right: 0px;
}

#content #software-information-block-table #col-software-name {
  padding-left: 0px;
}


#content .organization-average-rating-container {
  margin-top: 21px;
  overflow: auto;
}

#content .organization-average-rating-container .star-rate-text {
  font-size: 14px;
  letter-spacing: 0.2px;
  margin-right: 5px;
  padding: 4px 0px 0px 3px;
}

#content .organization-average-rating-container .star-container {
  margin-top: 2px;
}

#content .organization-average-rating-container .rate-this-organization {
  font-size: 14px;
  text-decoration: underline;
  margin: 4px 0px 0px 6px;
  padding: 0px 0px 0px 15px;
}

#content .organization-average-rating-container .star-container .medium-star-negative,
#content .organization-average-rating-container .star-container .medium-star-positive {
  margin-right: 3px;
}

/*** Internal Page ***/

#content .main-content .star-page-title,
#content .main-content .star-rate-data {
  max-width: 560px;
}

#content .main-content .star-page-title .title {
  font-size: 34px;
}

#content .main-content .star-rate-data {
  border-bottom: 1px solid #D3D6DE;
  border-top: 1px solid #D3D6DE;
  color: #172738;
  margin-top: 16px;
  padding: 29px 0px 21px 0px;
  overflow: visible;
}

#content .main-content .star-rate-data .star-rate-form .star-rate-text,
#content .main-content .star-rate-data .star-rate-form .star-container {
  display: inline;
  float: left;
}

#content .main-content .star-rate-data .star-rate-form .star-container {
  width: inherit;
  height: 30px;
  padding-left: 6px;
}

#content .main-content .star-rate-data .star-rate-form {
  padding: 0 37px;
  letter-spacing: 0.1px;
  width: 100%;
}

#content .main-content .star-rate-data .star-rate-form .star-rate-text {
  font-size: 14px;
  padding-top: 4px;
}

#content .main-content .star-rate-data .star-profile-information {
  padding-left: 15px;
  width: 79px;
}

#content .main-content .star-rate-data .star-profile-information .star-profile-image {
  padding-top: 1px;
}

#content .main-content .star-rate-data .star-profile-information .star-profile-image img {
  border-radius: 4px;
  height: 60px;
  width: 60px;
}

#content .main-content .star-rate-data .star-rate-form .star-container .star-positive {
  background-image: url('../images/star-positive-big.png');
}

#content .main-content .star-rate-data .star-rate-form .star-container .star-negative {
  background-image: url('../images/star-negative-big.png');
}

#content .main-content .star-rate-data .star-rate-form .star-container .star-positive,
#content .main-content .star-rate-data .star-rate-form .star-container .star-negative {
  display: table-cell;
  margin-right: 0px;
  height: 30px;
  width: 28px;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container {
  padding-top: 23px;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container .formlabel {
  letter-spacing: -0.2px;
  margin-bottom: 2px;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container #comments_body {
  border-radius: 4px;
  height: 91px;
  background: none #FFFFFF;
  border: 1px solid #DDDDDD;
  color: #585858;
  font-size: 16px;
  width: 100%;
  word-wrap: break-word;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container .button-bar input {
  background-color: #3E67B1;
  font-weight: 700;
  text-transform: uppercase;
  color: #FFF;
  padding: 5px;
  height: 31px;
  line-height: 20px;
  font-family: Arial;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container .button-bar a {
  display: none;
}

#content .main-content .star-rate-data .star-rate-form .star-comment-container .button-bar {
  padding-bottom: 50px;
}

#content .main-content .star-rate-data .star-rate-form .star-notice {
  display: none;
  float: left;
  margin-top: 10px;
  margin-left: 10px;
}
/* ... */

